--- a/Miniswipper/style.css
+++ b/Miniswipper/style.css
@@ -192,10 +192,44 @@ button{
     bottom: 4px;
     width: 20%;
 }
-p {
+p
+{
     margin: 0 0 10px;
     display: inline-block;
     position: relative;
     right: 54%;
     font-size: large;
+}
+
+#modalreplay .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 20%;
+    height: 20%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+#modalreplay .modal-content button {
+        margin: 11%;
+    width: 69%;
+    height: 100%;
+}
+
+#modalreplay .modal-content .modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+        display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.glyphicon.glyphicon-repeat {
+    font-size: 75px;
 }
